<resources>
    <string name="app_name">信息采集</string>
    <string name="menu_personal">个人中心</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_pulldata">导出数据</string>
    <string name="menu_help">帮助与反馈</string>
    <string name="search_text">请输入要搜索的单位</string>
    <string name="app_id">58421d56</string>
    <string name="login">登录</string>
    <string name="company_name">广州三川控制系统工程设备有限公司</string>

    <string name="logon_mima">请输入密码</string>
    <string name="login_account">请输入账号</string>
    <string name="turn_on_flashlight">打开闪光灯</string>
    <string name="turn_off_flashlight">关闭闪光灯</string>
    <string name="menu_check">审核</string>
    <string name="menu_add">新增</string>
    <string name="loading">加载中</string>
    <string name="desc_check_mark">check mark</string>
    <string name="transition_test">test</string>
    <string name="chooseAddr">选择坐标</string>
    <string name="commcmy">普通单位</string>
    <string name="title_modify_commcmy">修改普通单位信息</string>
    <string name="title_modify_company">修改重点单位信息</string>
    <string name="title_error">错误</string>
    <string name="title_modify_commcmy_license">修改普通单位审批信息</string>
    <string name="title_modify_company_license">修改重点单位审批信息</string>
    <string name="license_builder">建设单位：</string>
</resources>
