<!--
  ~ Copyright 2015 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/per"
        android:icon="@drawable/ic_mine"
        android:showAsAction="never"
        android:title="@string/menu_personal"
        app:showAsAction="never" />

    <item
        android:id="@+id/scan1"
        android:icon="@drawable/ic_saoyisao"
        android:title="@string/menu_scan"
        app:showAsAction="never"
        android:showAsAction="never" />

    <!--<item-->
    <!--android:icon="@drawable/ic_add"-->
    <!--android:id="@+id/pulldata"-->
    <!--app:showAsAction="never"-->
    <!--android:title="@string/menu_pulldata" />-->

    <item
        android:showAsAction="never"
        android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
    <item
        android:showAsAction="never"
        android:id="@+id/check"
        android:icon="@drawable/ic_shenghe"
        android:title="@string/menu_check"
        app:showAsAction="never" />
    <item
        android:showAsAction="never"
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add"
        app:showAsAction="never" />
</menu>