<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.suntrans.xiaofang.activity.others.Login_Activity">
   <TextView
       android:textColor="@color/white"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:textSize="25sp"
       android:layout_above="@+id/tv1"
       android:layout_marginBottom="5dp"
       android:text="武汉市公安消防局"/>
   <TextView
       android:id="@+id/tv1"
       android:textColor="@color/white"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:textSize="25sp"
       android:layout_above="@+id/ll_login"
       android:layout_marginBottom="60dp"
       android:text="消防安全网格化管理平台"/>
   <LinearLayout
       android:id="@+id/ll_login"
       android:layout_centerInParent="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

      <com.suntrans.xiaofang.views.EditView
          android:maxLines="1"
          android:background="@drawable/bg_login_edit"
          android:hint="@string/login_account"
          android:layout_width="match_parent"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          android:layout_height="50dp"
          android:drawableLeft="@mipmap/ic_user"
          android:id="@+id/account" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="30dp" />
      <com.suntrans.xiaofang.views.EditView
          android:maxLines="1"
          android:id="@+id/password"
          android:background="@drawable/bg_login_edit"
          android:hint="@string/logon_mima"
          android:inputType="textPassword"
          android:layout_width="match_parent"
          android:drawableLeft="@mipmap/ic_mima"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          android:layout_height="50dp" />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="30dp" />
      <Button
          android:id="@+id/login"
          android:text="@string/login"
          android:textSize="19sp"
          android:textColor="@color/white"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          android:background="@drawable/bg_login"/>
   </LinearLayout>
   <LinearLayout
       android:layout_alignParentBottom="true"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="bottom|center"
       android:layout_marginTop="20dip"
       android:layout_marginBottom="30dip"
       android:orientation="vertical">
      <ImageView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:scaleType="centerInside"
          android:src="@drawable/logo_suntrans"/>
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_marginBottom="20dip"
          android:layout_marginTop="10dip"
          android:textSize="18sp"
          android:textColor="@color/white"
          android:text="@string/company_name"/>
   </LinearLayout>
   <!--<TextView-->
       <!--android:id="@+id/bottomtext"-->
       <!--android:layout_alignParentBottom="true"-->
       <!--android:layout_width="match_parent"-->
       <!--android:layout_height="wrap_content"-->
       <!--android:gravity="center"-->
       <!--android:textColor="@color/white"-->
       <!--android:textSize="18sp"-->
       <!--android:layout_marginBottom="20dp"-->
       <!--android:text="@string/company_name"/>-->
</RelativeLayout>
